--- a/Wildify/View/Main.storyboard
+++ b/Wildify/View/Main.storyboard
@@ -300,7 +300,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QEP-22-lRP">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QEP-22-lRP">
                                 <rect key="frame" x="0.0" y="44" width="414" height="692"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
@@ -332,10 +332,27 @@
                     <view key="view" contentMode="scaleToFill" id="3yh-Js-AlV">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vOS-lb-nE6">
+                                <rect key="frame" x="20" y="144" width="374" height="30"/>
+                                <state key="normal" title="Show Cards"/>
+                                <connections>
+                                    <action selector="didTapButton" destination="7ej-hz-VKQ" eventType="touchUpInside" id="Zxf-Db-eZf"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="5vP-84-Kzm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5vP-84-Kzm" firstAttribute="trailing" secondItem="vOS-lb-nE6" secondAttribute="trailing" constant="20" id="3Gc-QH-11O"/>
+                            <constraint firstItem="vOS-lb-nE6" firstAttribute="leading" secondItem="5vP-84-Kzm" secondAttribute="leading" constant="20" id="inO-T0-GRH"/>
+                            <constraint firstItem="vOS-lb-nE6" firstAttribute="top" secondItem="5vP-84-Kzm" secondAttribute="top" constant="100" id="zlQ-h7-kDG"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ecr-rC-X6w"/>
+                    <connections>
+                        <outlet property="cardButton" destination="vOS-lb-nE6" id="vhd-yg-GfJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AXZ-iT-YYC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
